--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
+.containerbox {
+  border: dotted;
+}
+
+.navigationbar {
+  width : 100%;
+  margin-bottom: 50px;
+}
+
+.todaypatient{
+  width : 50%;
+}
+
+.pastrecords{
+  width : 50%;
+}
+
 .patient-table {
     width: 100%;
   }
